--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href="//www.jzsx.com">from sanxin check here
+<a href="https://www.baidu.com/s?ie=utf-8&f=8&rsv_bp=1&rsv_idx=1&tn=62095104_26_oem_dg&wd=%E9%BB%84%E8%89%B2%E7%BD%91%E7%AB%99&fenlei=256&rsv_pq=fc76cae600033913&rsv_t=010e5O85HPIIcqUPpcVsPZ5fz0tNSIN%2Bl1khYxMnDpkQ00%2B%2FQlHcQ1xJ0TlCx5QnqTerqYO2vegI&rqlang=cn&rsv_enter=1&rsv_dl=tb&rsv_sug3=3&rsv_sug2=0&rsv_btype=i&inputT=4652&rsv_sug4=5306">from sanxin check here
