--- a/index.html
+++ b/index.html
@@ -263,60 +263,60 @@ WIDGET = {
     <div class="search-group group-a">
      <span class="type-text">常用</span>
      <ul class="search-type">
-      <li><input onclick="bw()" checked="" hidden="" type="radio" autocomplete='off' name="type" id="type-baidu" value="https://quark.sm.cn/s?q=" data-placeholder="Quark" /><label for="type-baidu"><span>夸克</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" name="type" autocomplete='off' id="type-google" value="https://cn.bing.com/search?q=" data-placeholder="Bing搜索" /><label for="type-google"><span>Bing</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" name="type" autocomplete='off' id="type-zhihu" value="https://www.zhihu.com/search?type=content&amp;q=" data-placeholder="知乎" /><label for="type-zhihu"><span>知乎</span></label></li>
+      <li><input onclick="bw()" checked="" hidden="" type="radio" name="type" id="type-baidu" value="https://quark.sm.cn/s?q=" data-placeholder="Quark" /><label for="type-baidu"><span>夸克</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-google" value="https://cn.bing.com/search?q=" data-placeholder="Bing搜索" /><label for="type-google"><span>Bing</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-zhihu" value="https://www.zhihu.com/search?type=content&amp;q=" data-placeholder="知乎" /><label for="type-zhihu"><span>知乎</span></label></li>
      </ul>
     </div>
     <div class="search-group group-b">
      <span class="type-text">搜索</span>
      <ul class="search-type">
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-bing" value="https://cn.bing.com/search?q=" data-placeholder="Bing搜索" /><label for="type-bing"><span>Bing</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-yandex" value="https://yandex.com/search/?text=" data-placeholder="Yandex搜索" /><label for="type-yandex"><span>yandex</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-miji" value="https://mijisou.com/?q=" data-placeholder="秘迹搜索" /><label for="type-miji"><span>秘迹</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-360" value="https://www.so.com/s?q=" data-placeholder="360好搜" /><label for="type-360"><span>360</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-sogo" value="https://www.sogou.com/web?query=" data-placeholder="搜狗搜索" /><label for="type-sogo"><span>搜狗</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-bing" value="https://cn.bing.com/search?q=" data-placeholder="Bing搜索" /><label for="type-bing"><span>Bing</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-yandex" value="https://yandex.com/search/?text=" data-placeholder="Yandex搜索" /><label for="type-yandex"><span>yandex</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-miji" value="https://mijisou.com/?q=" data-placeholder="秘迹搜索" /><label for="type-miji"><span>秘迹</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-360" value="https://www.so.com/s?q=" data-placeholder="360好搜" /><label for="type-360"><span>360</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-sogo" value="https://www.sogou.com/web?query=" data-placeholder="搜狗搜索" /><label for="type-sogo"><span>搜狗</span></label></li>
      </ul>
     </div>
     <div class="search-group group-c">
      <span class="type-text">学习</span>
      <ul class="search-type">
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-baiduxueshu" value="https://xueshu.baidu.com/s?wd=" data-placeholder="百度学术" /><label for="type-baiduxueshu"><span>百度</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-googlescholar" value="https://scholar.google.com/scholar?hl=zh-CN&as_sdt=0%2C5&q=" data-placeholder="谷歌学术" /><label for="type-googlescholar"><span>谷歌</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-Zlibrary" value="https://b-ok.global/s/?q=" data-placeholder="Zlibrary电子书" /><label for="type-Zlibrary"><span>Zlibrary</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-github" value="https://github.com/search?q=" data-placeholder="github" /><label for="type-github"><span>github</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-CSDN" value="https://so.csdn.net/so/search/s.do?q=" data-placeholder="CSDN" /><label for="type-CSDN"><span>CSDN</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-baiduxueshu" value="https://xueshu.baidu.com/s?wd=" data-placeholder="百度学术" /><label for="type-baiduxueshu"><span>百度</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-googlescholar" value="https://scholar.google.com/scholar?hl=zh-CN&as_sdt=0%2C5&q=" data-placeholder="谷歌学术" /><label for="type-googlescholar"><span>谷歌</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-Zlibrary" value="https://b-ok.global/s/?q=" data-placeholder="Zlibrary电子书" /><label for="type-Zlibrary"><span>Zlibrary</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-github" value="https://github.com/search?q=" data-placeholder="github" /><label for="type-github"><span>github</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-CSDN" value="https://so.csdn.net/so/search/s.do?q=" data-placeholder="CSDN" /><label for="type-CSDN"><span>CSDN</span></label></li>
      </ul>
     </div>
     <div class="search-group group-d">
      <span class="type-text">工具</span>
      <ul class="search-type">
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-br" value="http://rank.chinaz.com/all/" data-placeholder="请输入网址(不带http://)" /><label for="type-br"><span>权重查询</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-links" value="http://link.chinaz.com/" data-placeholder="请输入网址(不带http://)" /><label for="type-links"><span>友链检测</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-icp" value="https://icp.aizhan.com/" data-placeholder="请输入网址(不带http://)" /><label for="type-icp"><span>备案查询</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-ping" value="http://ping.chinaz.com/" data-placeholder="请输入网址(不带http://)" /><label for="type-ping"><span>PING检测</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-404" value="http://tool.chinaz.com/Links/?DAddress=" data-placeholder="请输入网址(不带http://)" /><label for="type-404"><span>死链检测</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-ciku" value="http://www.ciku5.com/s?wd=" data-placeholder="请输入关键词" /><label for="type-ciku"><span>关键词挖掘</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-br" value="http://rank.chinaz.com/all/" data-placeholder="请输入网址(不带http://)" /><label for="type-br"><span>权重查询</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-links" value="http://link.chinaz.com/" data-placeholder="请输入网址(不带http://)" /><label for="type-links"><span>友链检测</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-icp" value="https://icp.aizhan.com/" data-placeholder="请输入网址(不带http://)" /><label for="type-icp"><span>备案查询</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-ping" value="http://ping.chinaz.com/" data-placeholder="请输入网址(不带http://)" /><label for="type-ping"><span>PING检测</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-404" value="http://tool.chinaz.com/Links/?DAddress=" data-placeholder="请输入网址(不带http://)" /><label for="type-404"><span>死链检测</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-ciku" value="http://www.ciku5.com/s?wd=" data-placeholder="请输入关键词" /><label for="type-ciku"><span>关键词挖掘</span></label></li>
      </ul>
     </div>
     <div class="search-group group-e">
      <span class="type-text">社区</span>
      <ul class="search-type">
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-wechat" value="http://weixin.sogou.com/weixin?type=2&amp;query=" data-placeholder="微信" /><label for="type-wechat"><span>微信</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-weibo" value="http://s.weibo.com/weibo/" data-placeholder="微博" /><label for="type-weibo"><span>微博</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-douban" value="https://www.douban.com/search?q=" data-placeholder="豆瓣" /><label for="type-douban"><span>豆瓣</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-why" value="https://ask.seowhy.com/search/?q=" data-placeholder="SEO问答社区" /><label for="type-why"><span>搜外问答</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-wechat" value="http://weixin.sogou.com/weixin?type=2&amp;query=" data-placeholder="微信" /><label for="type-wechat"><span>微信</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-weibo" value="http://s.weibo.com/weibo/" data-placeholder="微博" /><label for="type-weibo"><span>微博</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-douban" value="https://www.douban.com/search?q=" data-placeholder="豆瓣" /><label for="type-douban"><span>豆瓣</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-why" value="https://ask.seowhy.com/search/?q=" data-placeholder="SEO问答社区" /><label for="type-why"><span>搜外问答</span></label></li>
      </ul>
     </div>
     <div class="search-group group-f">
      <span class="type-text">生活</span>
      <ul class="search-type">
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-快递100" value="http://www.kuaidi100.com/?" data-placeholder="快递100" /><label for="type-快递100"><span>快递100</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-xiachufang" value="http://www.xiachufang.com/search/?keyword=" data-placeholder="下厨房" /><label for="type-xiachufang"><span>下厨房</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-xiangha" value="https://www.xiangha.com/so/?q=caipu&amp;s=" data-placeholder="香哈菜谱" /><label for="type-xiangha"><span>香哈菜谱</span></label></li>
-      <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-12306" value="http://www.12306.cn/?" data-placeholder="12306" /><label for="type-12306"><span>12306</span></label></li>
-      <li> <input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-qunar" value="https://www.qunar.com/?" data-placeholder="去哪儿" /><label for="type-qunar"><span>去哪儿</span></label></li>
-	   <li><input onclick="bw()" hidden="" type="radio" autocomplete='off' name="type" id="type-taobao" value="http://gouwu.5ai.pp.ua/index.php?r=l&kw=" data-placeholder="淘宝优惠券" /><label for="type-taobao"><span>优惠券</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-快递100" value="http://www.kuaidi100.com/?" data-placeholder="快递100" /><label for="type-快递100"><span>快递100</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-xiachufang" value="http://www.xiachufang.com/search/?keyword=" data-placeholder="下厨房" /><label for="type-xiachufang"><span>下厨房</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-xiangha" value="https://www.xiangha.com/so/?q=caipu&amp;s=" data-placeholder="香哈菜谱" /><label for="type-xiangha"><span>香哈菜谱</span></label></li>
+      <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-12306" value="http://www.12306.cn/?" data-placeholder="12306" /><label for="type-12306"><span>12306</span></label></li>
+      <li> <input onclick="bw()" hidden="" type="radio" name="type" id="type-qunar" value="https://www.qunar.com/?" data-placeholder="去哪儿" /><label for="type-qunar"><span>去哪儿</span></label></li>
+	   <li><input onclick="bw()" hidden="" type="radio" name="type" id="type-taobao" value="http://gouwu.5ai.pp.ua/index.php?r=l&kw=" data-placeholder="淘宝优惠券" /><label for="type-taobao"><span>优惠券</span></label></li>
      </ul>
     </div>
    </div>
