--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <?php
 require "common.php";
 
@@ -29,14 +30,14 @@ if ($set['autokeywords'] == 1) {
   <meta name="keywords" content="搜索，网址导航，浏览器主页">
   <meta name="description" content="可能是最简洁的搜索导航，给你简单舒爽的搜索体验。">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
-  <link href="https://shuqiq.gitee.io/css/style.css" rel="stylesheet" /> 
-  <link href="https://shuqiq.gitee.io/css/sousuo.css" rel="stylesheet" />  
+  <link href="https://wxnan.gitee.io/css/style.css" rel="stylesheet" /> 
+  <link href="https://wxnan.gitee.io/css/sousuo.css" rel="stylesheet" />  
   <link rel="stylesheet" href="//at.alicdn.com/t/font_1572019_yrk10qvz.css" /> 
   <link rel="stylesheet" href="//at.alicdn.com/t/font_1717091_3dju49kp67v.css" />
   <!--<link rel="stylesheet" href="css/loading.css">-->  <!--加载动画-->
   <!--<script src="https://cdnjs.loli.net/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
-  <script src="https://shuqiq.gitee.io/js/xd.js"></script> 
+  <script src="https://wxnan.gitee.io/js/xd.js"></script> 
 
  </head> 
  <body> 
@@ -334,9 +335,9 @@ WIDGET = {
     <input type="checkbox" id="set-search-blank" class="bubble-3" autocomplete="off" />
    </div>
   </div> 
-  <script type="text/javascript" src="js/yyss.js"></script>
-  <script type="text/javascript" src="js/sousuo.js"></script> 
-  <script type="text/javascript" src="js/lianxiang.js"></script> 
+  <script type="text/javascript" src="https://wxnan.gitee.io/js/yyss.js"></script>
+  <script type="text/javascript" src="https://wxnan.gitee.io/js/sousuo.js"></script> 
+  <script type="text/javascript" src="https://wxnan.gitee.io/js/lianxiang.js"></script> 
   <div class="bgo"></div> 
 <!--<img class="logo" src="images/logoX.png" />-->
  </body>
